# finance-manager

./: .gitignore  Icon.psd  README.md  dockerfile  run_prod.bat  startdev.bat  startdevNoCode.bat  startdev_sqlite.bat  typingREST.uxf
server/: .emdtdel  .gitignore  .template.env  Cargo.toml  bacon.toml  coverage.bat  coverage.sh  coverage_console.bat  coverage_console.sh  mutants_test.bat  mutants_test.sh  package-lock.json  package.json  reset_db.bat  test.env  tsconfig.json
server/migration/: Cargo.toml
server/migration/src/: lib.rs  m20220101_000002_create_user_table.rs  m20250203_000001_create_token_table.rs  m20250204_000001_create_account_table.rs  m20250204_000001_create_container_table.rs  m20250204_000002_create_currency_table.rs  m20250208_000001_currency_rate_datum.rs  m20250301_000001_create_txn_tag_table.rs  m20250315_000001_create_fragment_table.rs  m20250315_000002_create_txn_table.rs  main.rs
server/server/: coverage.bat
server/server/src/: main.rs
server/server/src/caches/: currency.cache.rs  currency_rate_datum.cache.rs  mod.rs
server/server/src/extractors/: auth_user.rs
server/server/src/repositories/: containers.repo.rs  currencies.repo.rs  currency_rate_datum.repo.rs  users.repo.rs
server/server/src/routes/: containers.route.rs  currencies.route.rs  currency_rate_datums.route.rs  mod.rs
server/server/src/services/: currencies.service.rs  mod.rs  (+1 more)
server/server_build/: database.js  extendedLog.js  server.js  supexShortcuts.js
server/server_build/finance/: financeDatabase.js  financeModule.js
server/server_source/: LinearInterpolator.ts  accessToken.ts  account.ts  database.ts  entry.ts  extendedLog.ts  router.ts  scheduler.ts  server.ts  ssl.ts  supexShortcuts.ts  throttledConnection.ts  uuid.ts
server/server_source/actions/: copyFromProduction.ts
server/server_source/finance/: accessToken.ts  account.ts  amount.ts  container.ts  cryptoWalletWatchDog.ts  currency.ts  dataCache.ts  financeDatabase.ts  financeEndpoints.ts  financeModule.ts  totalValueRecord.ts  transaction.ts
server/server_source/routes/: accounts.ts  api.ts  batch.ts  containers.ts  currencies.ts  dev.ts  graphs.ts  staticAssets.ts  transactionTypes.ts  transactions.ts
server/src/: date.rs  env.rs  lib.rs  linear_interpolator.rs  logging.rs  main.rs  maths.rs
server/src/caches/: currency.cache.rs  currency_rate_datum.cache.rs  mod.rs  txn_tag.cache.rs
server/src/extended_models/: account.rs  currency.rs
server/src/extractors/: auth_user.rs
server/src/migration/: m20250203_000001_create_token_table.rs  m20250204_000001_create_container_table.rs  m20250204_000002_create_currency_table.rs  m20250208_000001_currency_rate_datum.rs  m20250301_000001_create_txn_tag_table.rs  mod.rs
server/src/repositories/: currencies.repo.rs  mod.rs
server/src/routes/: accounts.route.rs  bootstrap.rs  containers.route.rs  currencies.route.rs  currency_rate_datums.route.rs  dev.route.rs  mod.rs  txn_tags.route.rs  txns.route.rs  users.route.rs
server/src/services/: accounts.service.rs  containers.service.rs  currencies.service.rs  currency_rate_datum.service.rs  mod.rs  txn_tags.service.rs  txns.service.rs  users.service.rs
server/src/states/: database_states.rs  mod.rs
server/src/tests/: account.test.rs  container.test.rs  currency.test.rs  currency_rate_datum.test.rs  linear_interpolator.test.rs  mod.rs  neighbors.test.rs  txn.test.rs  txn_tag.test.rs  user.test.rs
server/tests/: auth.spec.js  dataCorrectnessData1.json  database.spec.js  frontend.spec.js  init.spec.js  test.spec.js  testData.json  txns.spec.js
server/tests/databaseAccessTests/: test.spec.js  testData.json
server/tests/frontendAccessTests/: test.spec.js
(+514 files in other folders)
