[package]
name = "rust_playground_6_ActixSeaORM"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.31"
sea-orm = { version = "1.1.0", features = [ "sqlx-sqlite", "runtime-async-std-native-tls", "macros", "with-json", "debug-print", "with-uuid" ] }
argon2 = "0.5.3"
actix-web = "4"
serde = "1.0.217"
serde_json = "1.0.137"
actix-http = "3.9.0"
dotenv = "0.15.0"
mutants = "0.0.3"
ts-rs = "10.1.0"

[dependencies.uuid]
version = "1.12.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
