[package]
name = "finance-manager-server"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.31"
sea-orm = { version = "1.1.7", features = [ "sqlx-sqlite", "sqlx-postgres", "runtime-async-std-native-tls", "macros", "with-json", "debug-print", "with-uuid" ] }
argon2 = "0.5.3"
actix-web = "4"
serde = "1.0.218"
serde_json = "1.0.140"
actix-http = "3.9.0"
dotenv = "0.15.0"
mutants = "0.0.3"
ts-rs = { version = "10.1.0", features = ["uuid-impl"] }
clap = "4.5.31"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
port_check = "0.2.1"
serde_urlencoded = "0.7.1"

[dependencies.uuid]
version = "1.15.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[dependencies.sea-orm-migration]
version = "1.1.7"
features = [
  # Enable at least one `ASYNC_RUNTIME` and `DATABASE_DRIVER` feature if you want to run migration via CLI.
  # View the list of supported features at https://www.sea-ql.org/SeaORM/docs/install-and-config/database-and-async-runtime.
  # e.g.
  # "runtime-tokio-rustls",  # `ASYNC_RUNTIME` feature
  # "sqlx-postgres",         # `DATABASE_DRIVER` feature
  "runtime-async-std-native-tls",
  "sqlx-sqlite"
]
